Imperativa1/target/generated-sources/javacc/li1/plp/imperative1/parser/Imp1Parser.java
/* Generated By:JavaCC: Do not edit this line. Imp1Parser.java */
package li1.plp.imperative1.parser;

import li1.plp.expressions1.util.*;
import li1.plp.expressions2.expression.*;
import li1.plp.imperative1.command.*;
import li1.plp.imperative1.declaration.*;
import li1.plp.imperative1.memory.*;
import li1.plp.imperative1.*;
import java.util.*;
import li1.plp.imperative1.command.IO;

public class Imp1Parser implements Imp1ParserConstants {

    public static void main(String args[]) {
        ListaValor entrada = new ListaValor();
            Imp1Parser parser;
            if (args.length == 0) {
                System.out.println("Imperativa 1 PLP Parser Version 0.0.2:  Reading from standard input . . .");
                parser = new Imp1Parser(System.in);
            } else  {
                System.out.println("Imperativa 1 PLP Parser Version 0.0.2:  Reading from file " + args[0] + " . . .");
                try {
                        parser = new Imp1Parser(new java.io.FileInputStream(args[0]));
                } catch (java.io.FileNotFoundException e) {
                        System.out.println("Java Parser Version 1.0.2:  File " + args[0] + " not found.");
                        return;
                }

                List valores = new LinkedList();
                for(int i=1;i<args.length;i++)
                {
                        String parametro = args[i];

                        try {
                                Integer inteiro = Integer.valueOf(parametro);
                                valores.add(new ValorInteiro(inteiro.intValue()));
                                continue;
                        } catch(NumberFormatException e) {

                        }

                        if(parametro.equalsIgnoreCase("true")
                            || parametro.equalsIgnoreCase("false")) {
                                Boolean booleano = Boolean.valueOf(parametro);
                                valores.add(new ValorBooleano(booleano.booleanValue()));
                        } else {
                            valores.add(new ValorString(parametro));
                        }
                }

                  entrada = criaListaValor(valores);
            }

            try {
            Programa programa = parser.Input();
            System.out.println("Imperativa 1 PLP Parser Version 0.0.2:  Imperativa2 program parsed successfully.");
            if(programa.checaTipo(new ContextoCompilacaoImperativa(entrada))) {
                ListaValor saida = programa.executar(new ContextoExecucaoImperativa(entrada));
                System.out.println(saida);
            }
            else {
                System.out.println("Erro de tipo");
            }
        } catch (Exception e) {
            System.out.println("Imperativa 1 PLP Parser Version 0.0.2:  Encountered errors during parse.");
            e.printStackTrace();
        }
        }

        public static ListaValor criaListaValor(List valores) {
                if(valores.size() == 0) {
                        return new ListaValor();
                }

                Valor primeiro = (Valor) valores.get(0);
                valores.remove(0);
                return new ListaValor(primeiro, criaListaValor(valores));

        }

  static final public Programa Input() throws ParseException {
    Programa retorno;
    retorno = PPrograma();
    jj_consume_token(0);
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Programa PPrograma() throws ParseException {
        Comando retorno;
    retorno = PComando();
                {if (true) return new Programa(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Comando PComando() throws ParseException {
        Comando retorno;
    if (jj_2_1(2147483647)) {
      retorno = PSequenciaComando();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMAND_SKIP:
      case WHILE:
      case READ:
      case WRITE:
      case IF:
      case IDENTIFIER:
      case LPAREN:
      case LBRACE:
        retorno = PComandoSimples();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public SequenciaComando PSequenciaComando() throws ParseException {
        Comando c1;
        Comando c2;
    c1 = PComandoSimples();
    jj_consume_token(SEMICOLON);
    c2 = PComando();
         {if (true) return new SequenciaComando(c1, c2);}
    throw new Error("Missing return statement in function");
  }

  static final public IO PIO() throws ParseException {
        IO retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case READ:
      retorno = PRead();
      break;
    case WRITE:
      retorno = PWrite();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Read PRead() throws ParseException {
        Id id;
    jj_consume_token(READ);
    jj_consume_token(LPAREN);
    id = PId();
    jj_consume_token(RPAREN);
         {if (true) return new Read (id);}
    throw new Error("Missing return statement in function");
  }

  static final public Write PWrite() throws ParseException {
        Expressao exp;
    jj_consume_token(WRITE);
    jj_consume_token(LPAREN);
    exp = PExpressao();
    jj_consume_token(RPAREN);
         {if (true) return new Write(exp);}
    throw new Error("Missing return statement in function");
  }

  static final public IfThenElse PIfThenElse() throws ParseException {
        Expressao expressao;
        Comando comandoThen;
        Comando comandoElse;
    jj_consume_token(IF);
    expressao = PExpressao();
    jj_consume_token(THEN);
    comandoThen = PComando();
    jj_consume_token(ELSE);
    comandoElse = PComando();
         {if (true) return new IfThenElse (expressao, comandoThen, comandoElse);}
    throw new Error("Missing return statement in function");
  }

  static final public While PWhile() throws ParseException {
        Expressao expressao;
        Comando comando;
    jj_consume_token(WHILE);
    expressao = PExpressao();
    jj_consume_token(DO);
    comando = PComando();
         {if (true) return new While(expressao, comando);}
    throw new Error("Missing return statement in function");
  }

  static final public Skip PSkip() throws ParseException {
    jj_consume_token(COMAND_SKIP);
         {if (true) return new Skip();}
    throw new Error("Missing return statement in function");
  }

  static final public Atribuicao PAtribuicao() throws ParseException {
        Id id;
        Expressao exp;
    id = PId();
    jj_consume_token(ATTRIB);
    exp = PExpressao();
                {if (true) return new Atribuicao(id, exp);}
    throw new Error("Missing return statement in function");
  }

  static final public Id PId() throws ParseException {
        Token token;
    token = jj_consume_token(IDENTIFIER);
                {if (true) return new Id(token.toString());}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorInteiro() throws ParseException {
        Token token;
    token = jj_consume_token(INTEGER_LITERAL);
                {if (true) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorBooleano() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
      jj_consume_token(FALSE);
                    {if (true) return new ValorBooleano(false);}
      break;
    case TRUE:
      jj_consume_token(TRUE);
                    {if (true) return new ValorBooleano(true);}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorString() throws ParseException {
        Token token;
    token = jj_consume_token(STRING_LITERAL);
                String tokenStr = token.toString();
                tokenStr = tokenStr.substring(1,tokenStr.length()-1);
                {if (true) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValor() throws ParseException {
        Valor retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      retorno = PValorInteiro();
      break;
    case TRUE:
    case FALSE:
      retorno = PValorBooleano();
      break;
    case STRING_LITERAL:
      retorno = PValorString();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpMenos() throws ParseException {
        Expressao retorno;
    jj_consume_token(MINUS);
    retorno = PExpressao();
                {if (true) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpNot() throws ParseException {
        Expressao retorno;
    jj_consume_token(NOT);
    retorno = PExpressao();
                {if (true) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpLength() throws ParseException {
        Expressao retorno;
    jj_consume_token(LENGTH);
    retorno = PExpressao();
                {if (true) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpPrimaria() throws ParseException {
    Expressao retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      retorno = PId();
      break;
    case TRUE:
    case FALSE:
    case INTEGER_LITERAL:
    case STRING_LITERAL:
      retorno = PValor();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      retorno = PExpressao();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpUnaria() throws ParseException {
        Expressao retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      retorno = PExpMenos();
      break;
    case NOT:
      retorno = PExpNot();
      break;
    case LENGTH:
      retorno = PExpLength();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpBinaria() throws ParseException {
        Expressao retorno, param2;
    if (jj_2_2(2147483647)) {
      retorno = PExpConcat();
    } else if (jj_2_3(2147483647)) {
      retorno = PExpSub();
    } else if (jj_2_4(2147483647)) {
      retorno = PExpAnd();
    } else if (jj_2_5(2147483647)) {
      retorno = PExpOr();
    } else if (jj_2_6(2147483647)) {
      retorno = PExpEquals();
    } else if (jj_2_7(2147483647)) {
      retorno = PExpSoma();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpSoma PExpSoma() throws ParseException {
        Expressao esq;
        Expressao dir;
    esq = PExpPrimaria();
    jj_consume_token(PLUS);
    dir = PExpressao();
         {if (true) return new ExpSoma(esq, dir);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpSub PExpSub() throws ParseException {
        Expressao esq;
        Expressao dir;
    esq = PExpPrimaria();
    jj_consume_token(MINUS);
    dir = PExpressao();
         {if (true) return new ExpSub(esq, dir);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpAnd PExpAnd() throws ParseException {
        Expressao esq;
        Expressao dir;
    esq = PExpPrimaria();
    jj_consume_token(AND);
    dir = PExpressao();
         {if (true) return new ExpAnd(esq, dir);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpOr PExpOr() throws ParseException {
        Expressao esq;
        Expressao dir;
    esq = PExpPrimaria();
    jj_consume_token(OR);
    dir = PExpressao();
         {if (true) return new ExpOr(esq, dir);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpEquals PExpEquals() throws ParseException {
        Expressao esq;
        Expressao dir;
    esq = PExpPrimaria();
    jj_consume_token(EQ);
    dir = PExpressao();
         {if (true) return new ExpEquals(esq, dir);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpConcat PExpConcat() throws ParseException {
        Expressao esq;
        Expressao dir;
    esq = PExpPrimaria();
    jj_consume_token(CONCAT);
    dir = PExpressao();
         {if (true) return new ExpConcat(esq, dir);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpressao() throws ParseException {
        Expressao retorno;
    if (jj_2_8(2)) {
      retorno = PExpUnaria();
    } else if (jj_2_9(2147483647)) {
      retorno = PExpBinaria();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
      case LPAREN:
        retorno = PExpPrimaria();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

/*  ADICIONADO OU MODIFICADO DA Imperativa1 PARA A Imperativa2  */
  static final public Comando PComandoSimples() throws ParseException {
        Comando retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMAND_SKIP:
      retorno = PSkip();
      break;
    case IDENTIFIER:
      retorno = PAtribuicao();
      break;
    case LBRACE:
      retorno = PComandoDeclaracao();
      break;
    case WHILE:
      retorno = PWhile();
      break;
    case IF:
      retorno = PIfThenElse();
      break;
    case READ:
    case WRITE:
      retorno = PIO();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      retorno = PComando();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public ComandoDeclaracao PComandoDeclaracao() throws ParseException {
        Declaracao dec;
        Comando comando;
    jj_consume_token(LBRACE);
    dec = PDeclaracao();
    jj_consume_token(SEMICOLON);
    comando = PComando();
    jj_consume_token(RBRACE);
                {if (true) return new ComandoDeclaracao(dec, comando);}
    throw new Error("Missing return statement in function");
  }

  static final public Declaracao PDeclaracao() throws ParseException {
        Declaracao retorno;
    if (jj_2_10(2147483647)) {
      retorno = PDeclaracaoComposta();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        retorno = PDeclaracaoVariavel();
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        retorno = PDeclaracao();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
         {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public DeclaracaoComposta PDeclaracaoComposta() throws ParseException {
        Declaracao d1;
        Declaracao d2;
    d1 = PDeclaracaoVariavel();
    jj_consume_token(COMMA);
    d2 = PDeclaracao();
         {if (true) return new DeclaracaoComposta(d1, d2);}
    throw new Error("Missing return statement in function");
  }

  static final public DeclaracaoVariavel PDeclaracaoVariavel() throws ParseException {
        Id id;
        Expressao exp;
        DeclaracaoVariavel retorno;
    jj_consume_token(VAR);
    id = PId();
    jj_consume_token(ASSIGN);
    exp = PExpressao();
                 retorno = new DeclaracaoVariavel(id, exp);
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }
